--- a/app/src/main/res/drawable/background_splashscreen.xml
+++ b/app/src/main/res/drawable/background_splashscreen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/white" />
+    <item android:drawable="@color/design_default_color_primary_dark" />
     <item>
         <bitmap
             android:gravity="center"
